--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,11 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql://steel:steel@db:5432/steel_db
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=steel
+      - DB_PASSWORD=steel
+      - DB_NAME=steel_db
     depends_on:
       - db
     volumes:
